fix font size on small device less than 500px.

--- a/style.css
+++ b/style.css
@@ -590,7 +590,7 @@ footer p{
 
 @media only screen and (max-width: 400px){
   .landing-page h1{
-    font-size: 60px;
+    font-size: 90px;
   }
 }
 
